fix style
careful not put too much div

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 body {
   background-color: #f9f7fe;
-  font-family:  "Roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
-main{
+main {
   padding: 30px;
 }
 
@@ -43,14 +43,13 @@ h1 {
   font-weight: bold;
 }
 footer {
-     border-top: 1px solid #f9f7fe;
-    padding: 30px 0 0 0;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.6);
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
 }
 .weather-details {
-  display: flex
   font-size: 16px;
   color: rgba(39, 33, 66, 0.4);
   font-weight: 500;
@@ -62,18 +61,17 @@ strong {
   display: flex;
   justify-content: space-between;
 }
-.temperature-emoji{
-    display: flex;
+.temperature-emoji {
+  display: flex;
 }
-.emoji{
+.emoji {
   width: 88px;
   height: 88px;
 }
-.temperature{
+.temperature {
   font-size: 88px;
-  font-style: bold ;
+  font-style: bold;
 }
-.mesure{
+.mesure {
   font-size: 24px;
-
 }
